[package]
name = "samba_printer_finder"
version = "0.0.1-alpha"
description = "A simple Utillity to find a smb (samba) Printer on the Network"
license = "GPL-3"
authors = [".J.E.B."]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.179"
once_cell = "1.21.3"
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
glib = "0.21.5"
oneshot = "0.1.11"
url = "2.5.8"
url-escape = "0.1.1"

[build-dependencies]
pkg-config = "0.3.32"

