[package]
name = "samba_printer_finder"
version = "0.0.1"
description = "A simple Utillity to find a smb (samba) Printer on the Network"
license = "GPL-3"
authors = [".J.E.B."]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.179"
once_cell = "1.21.3"
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
glib = "0.21.5"
oneshot = "0.1.11"
url = "2.5.8"
url-escape = "0.1.1"

[build-dependencies]
pkg-config = "0.3.32"

[package.metadata.bundle]
name = "Samba Printer Finder"
identifier = "io.github.jgr1585.SambaPrinterFinder"
category = "Utility"
deb_dependency = ["libgtk-4-bin", "libglib2.0-bin", "libcups2t64", "samba-common"]

[package.metadata.appimage]
name = "Samba Printer Finder"
icon = "assets/icon.svg"
auto_link = true
